--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 server:
   port: 8087
+  error:
+    whitelabel:
+      enabled: false
+    path: /error
 
 spring:
   datasource:
@@ -23,7 +27,7 @@ spring:
         show_sql: true
         format_sql: true
         default_schema: "project"
+
   jackson:
     serialization:
       fail-on-empty-beans: false
-
